name:                 Minesweeper
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Jianshen Liu
maintainer:           jliu120@ucsc.edu
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Minesweeper
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , random
                      , text
                      , split
                      , tabular
                      , old-time
  hs-source-dirs:       src
  default-language:     Haskell2010
