name:                 Minesweeper
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Jianshen Liu
maintainer:           jliu120@ucsc.edu
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Minesweeper
  main-is:              Main.hs
  other-modules:        AISolver
                      , LayoutRender
                      , MapGenerator
                      , Util
  -- other-extensions:
  build-depends:        base >= 4.5 && < 5
                      , containers
                      , random
                      , split
                      , tabular
                      , monad-par
                      , parallel
  hs-source-dirs:       src
  default-language:     Haskell2010
